[package]
name = "tokio-libevent"
version = "0.1.0"
edition = "2018"

[lib]
name = "tokio_libevent"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
tokio = { version = "1", features = ["full"] }
