[package]
name = "tokio-libevent"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[lib]
name = "tokio_libevent"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
futures-util = "0.3"
libc = "0.2"
socket2 = { version = "0.4", features = ["all"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
bindgen = "0.59"
cmake = "0.1"
pkg-config = "0.3"
