[package]
name = "hello"
version = "0.1.0"
authors = ["Jon Magnuson <jon.magnuson@gmail.com>"]
edition = "2018"

[dependencies]
libevent-sys = "0.2"
tokio-libevent = { path = "../../" }
futures = "0.3"
libc = "0.2"
mio = "0.6"

[dependencies.tokio]
# path = "../tokio"
# version = "0.2"
git = "https://github.com/jmagnuson/tokio"
branch = "feature/park-shim"
default-features = false
features = [ "full" ]

[build-dependencies]
cmake = "0.1"
