[package]
name = "hello"
version = "0.1.0"
authors = ["Jon Magnuson <jon.magnuson@gmail.com>"]
edition = "2018"

[dependencies]
tokio-libevent = { path = "../../" }
futures = "0.3"
libc = "0.2"
mio = "0.6"

[dependencies.libevent]
#path = "../../"
git = "https://github.com/jmagnuson/libevent-rs"
branch = "hacking"

# Needed to access headers, and create an FFI from C->Rust.
[dependencies.libevent-sys]
#path = "../../libevent-sys"
git = "https://github.com/jmagnuson/libevent-rs"
branch = "hacking"
#
[dependencies.tokio]
#path = "../../../tokio/tokio"
version = "0.2"
git = "https://github.com/jmagnuson/tokio"
branch = "feature/park-shim"
default-features = false
features = [ "full" ]

[build-dependencies]
cmake = "0.1"

#[patch.crates-io]
#mio = { path = "../../mio" }
#tokio = { path = "../../tokio/tokio" }
